# ChrisAdairPortfolio

./: README.md
A Decision Transformer Approach to GBN Optimization/: DatasetImporter.py  GameSimulation.py  GameTransformer.py  evaluate.py  experiment.py  submit_job.sh  submit_job_eval.sh
A Decision Transformer Approach to GBN Optimization/Checkpoints/: chkpt0.txt  chkpt1000.txt  chkpt2000.txt  chkpt3000.txt  chkpt4000.txt  chkpt5000.txt  chkpt6000.txt  chkpt7000.txt  chkpt8000.txt  chkpt9000.txt
A Decision Transformer Approach to GBN Optimization/EvalData/: n10-id8Encrypt 6 12-11-2022-02-05.mat  n15-id2Encrypt 18 2-12-2022-09-10.mat  n25-id3Encrypt 20 2-12-2022-09-29.mat  n30-id1Encrypt 23 2-12-2022-09-52.mat
A Decision Transformer Approach to GBN Optimization/EvalDataSmall/: n6-id2Encrypt 2 6-10-2021-02-18.mat
A Decision Transformer Approach to GBN Optimization/PlayerData/: n10-id10Encrypt 7 10-11-2022-08-48.mat  n10-id10Encrypt 7 16-6-2022-11-49.mat  n10-id10Encrypt 7 17-6-2022-09-25.mat  n10-id10Encrypt 7 2-12-2022-05-18.mat  n10-id10Encrypt 7 20-7-2023-09-06.mat  n10-id10Encrypt 7 24-10-2021-12-02.mat  n10-id10Encrypt 7 24-6-2023-10-34.mat  n10-id10Encrypt 7 28-4-2023-06-32.mat  n10-id10Encrypt 7 28-4-2023-06-35.mat  (+219 more)
Operation Forge the Deep/: app.config
PhysicsAndEngineFromScratch/: CMakeLists.txt  collider.cpp  collider.h  colliderTests.cpp  gameobject.cpp  gameobject.h  mainwindow.cpp  mainwindow.h  mainwindowform.ui  newtonPhysicTests.cpp  newtonphysobj.cpp  newtonphysobj.h  osgwidget.cpp  osgwidget.h  worldcontroller.cpp  worldcontroller.h
(+1428 files in other folders)
